# cpython-lite

./: .gitignore  CMakeLists.txt  README.md
bootstraping/: bootstrap-basic-unix.tar.xz  bootstrap-basic-win32.tar.xz  bootstrap-packaging-unix.tar.xz  bootstrap-packaging-win32.tar.xz
cmake-python/: CMakeLists.txt  README.md
config/: README.md  posixmodule-3.9.4.patch  posixmodule.c  pyconfig-tool.c
config/android32/: README.md  pyconfig.h
config/linux64/: config.c  pyconfig.h
config/win32/: READ  README.md  config.c  pyconfig.h
main/: README.md  embed-basic.py  embed-package.py  embed.c  python.c
